--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "node": "7x"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
     "gsa-sheets": "^1.0.2",
-    "mongodb": "^2.2.28"
+    "gulp-cli": "^1.3.0",
+    "mongodb": "^2.2.30",
+    "mysql": "^2.13.0",
+    "node-mysql": "^0.4.2",
+    "pg": "^7.0.1",
+    "pg-query": "^0.11.0"
   },
   "scripts": {
     "start": "node server.js",
